add role and permissionsetting

--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -10,7 +10,8 @@
 }
 .navbar-brand{
     font-family: 'Poppins', sans-serif;
-    font-size: 28px;
+    font-size: 22px;
+    padding-right: 0;
     font-weight: 400;
 }
 
