--- a/public/css/ruang-admin.css
+++ b/public/css/ruang-admin.css
@@ -157,7 +157,7 @@ a:focus {
 
 .bg-gradient-primary {
   background-color: #6777EF;
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(10%, #6777EF), to(#303f9f));
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(10%, #6777ef), to(#303f9f));
   background-image: linear-gradient(180deg, #6777EF 10%, #303f9f 100%);
   background-size: cover;
 }
