--- a/public/css/ruang-admin.css
+++ b/public/css/ruang-admin.css
@@ -527,8 +527,8 @@ a:focus {
 }
 
 .topbar .dropdown-list .dropdown-header {
-  background-color: #3f51b5;
-  border: 1px solid #3f51b5;
+  background-color: #41586E;
+  /*border: 1px solid #3f51b5;*/
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
   color: #fff;
@@ -596,13 +596,13 @@ a:focus {
 }
 
 .topbar.navbar-light .navbar-nav .nav-item .nav-link {
-  color: #fafafa;
+  color: #A3B6C6;
   transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
 }
 
 .topbar.navbar-light .navbar-nav .nav-item .nav-link:hover {
-  color: #e0e0e0;
+  color: #ffffff;
   transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
 }
@@ -618,7 +618,7 @@ a:focus {
 .sidebar {
   min-height: 100vh;
   width: 14rem !important;
-  background-color: #ffffff !important;
+  /*background-color: #ffffff !important;*/
   -webkit-box-shadow: 0 0.15rem 1.75rem 0 rgba(58, 59, 69, 0.15) !important;
   box-shadow: 0 0.15rem 1.75rem 0 rgba(58, 59, 69, 0.15) !important;
   z-index: 0;
@@ -652,7 +652,8 @@ a:focus {
 }
 
 .sidebar .nav-item.active .nav-link {
-  font-weight: 800;
+  /*font-weight: 800;*/
+    background-color: #2E3E4E;
 }
 
 .sidebar .nav-item .nav-link[data-toggle="collapse"]::after {
@@ -1116,7 +1117,6 @@ a:focus {
 
 .sidebar-light .sidebar-brand {
   color: #fafafa;
-  background-color: #4C60DA;
 }
 
 .sidebar-light hr.sidebar-divider {
@@ -1124,28 +1124,28 @@ a:focus {
 }
 
 .sidebar-light .sidebar-heading {
-  color: #b7b9cc;
+  color: #ffffff;
 }
 
 .sidebar-light .nav-item .nav-link {
-  color: #858796;
+  color: #A3B6C6;
 }
 
 .sidebar-light .nav-item .nav-link i {
-  color: #9e9e9e;
+  color: #A3B6C6;
 }
 
 .sidebar-light .nav-item .nav-link:active,
 .sidebar-light .nav-item .nav-link:focus,
 .sidebar-light .nav-item .nav-link:hover {
-  color: #6e707e;
-  background-color: #eeeeee;
+  color: #ffffff;
+  background-color: #2E3E4E;
 }
 
 .sidebar-light .nav-item .nav-link:active i,
 .sidebar-light .nav-item .nav-link:focus i,
 .sidebar-light .nav-item .nav-link:hover i {
-  color: #6e707e;
+  color: #ffffff;
 }
 
 .sidebar-light .nav-item .nav-link[data-toggle="collapse"]::after {
@@ -1153,11 +1153,11 @@ a:focus {
 }
 
 .sidebar-light .nav-item.active .nav-link {
-  color: #6e707e;
+  color: #ffffff;
 }
 
 .sidebar-light .nav-item.active .nav-link i {
-  color: #6e707e;
+  color: #fcfcfc;
 }
 
 .sidebar-light #sidebarToggle {
